Bug 134523 - Calc hangs when you press Cancel in Autofilter window (mac OS only?)
Summary: Calc hangs when you press Cancel in Autofilter window (mac OS only?)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All macOS (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2020-07-05 10:29 UTC by Roman Kuznetsov
Modified: 2020-07-21 08:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-07-05 10:29:13 UTC
Description:
Calc hangs when you press Cancel in Autofilter window

Steps to Reproduce:
1. Create any list in Calc (from A1) like
Filter
1
2
3

2. Select A1 cell and create Autofilter
3. Press triangle to open Autofilter
4. Press Cancel button in Autofilter window
5. Calc hangs

Actual Results:
Calc hangs

Expected Results:
Calc works fine


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+
Build ID: 92c2318db92c3f102243ef1f8a9a492796932ff6
CPU threads: 4; OS: Mac OS X 10.15.5; UI render: default; VCL: osx
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded

not repro in 7.0 => regression

not repro in windows => possibly macOS only
Comment 1 Andrew Watson 2020-07-08 10:34:37 UTC
Confirming but NOT reproducible in:

Version: 7.0.0.1
Build ID: 04ba7e3f1e51af6c5d653e543a620e36719083fd
CPU threads: 4; OS: Mac OS X 10.11.6; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded
Comment 2 Xisco Faulí 2020-07-08 15:04:03 UTC
Not reproducible in

Version: 7.1.0.0.alpha0+
Build ID: 0695b5f5b328a1bc9cfdc8ba020dbdd674185e04
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Roman Kuznetsov 2020-07-14 12:26:07 UTC
(In reply to Andrew Watson from comment #1)
> Confirming but NOT reproducible in:
> 
> Version: 7.0.0.1
> Build ID: 04ba7e3f1e51af6c5d653e543a620e36719083fd
> CPU threads: 4; OS: Mac OS X 10.11.6; UI render: default; VCL: osx
> Locale: en-GB (en_GB.UTF-8); UI: en-GB
> Calc: threaded

Andrew, what do you mean? Did you confirm it in 7.1 but not in 7.0? If yes, you should change status to NEW
Comment 4 Xisco Faulí 2020-07-14 16:44:20 UTC
Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: f3d21c378863a2a8756ded5dff6d1c18bc3c5db2
CPU threads: 8; OS: Mac OS X 10.14.6; UI render: default; VCL: osx
Locale: en-US (en_ES.UTF-8); UI: en-US
Calc: threaded
Comment 5 Xisco Faulí 2020-07-14 17:01:16 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a16e6122dc62f545df90b9ea4d1f4723c46336b6

author	Caolán McNamara <caolanm@redhat.com>	2020-05-28 15:24:29 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-06-12 20:03:54 +0200
commit a16e6122dc62f545df90b9ea4d1f4723c46336b6 (patch)
tree b6dfbe06f36d715292fe88821f33f141645b1ad2
parent a5b181df04e4688256bda19e1bece7bf9fd3fa02 (diff)
weld checklistmenu

Bisected with: bibisect-mac64-7.1

Adding Cc: to Caolán McNamara
Comment 6 Commit Notification 2020-07-17 13:00:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/05cdcd8c4ecc21be45b4199e67028b43dc89aac9

tdf#134523 variable is null during reentrant calls

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Roman Kuznetsov 2020-07-21 08:31:47 UTC
verified in

Version: 7.1.0.0.alpha0+
Build ID: 1c584069a86e35b847f398b8bf78dce7428c2f63
CPU threads: 4; OS: Mac OS X 10.15.5; UI render: default; VCL: osx
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded

thanks for fix