tdf#134523 variable is null during reentrant calls

Change-Id: Ic7aef7b406bd77d242870cbd04e55264cad9b7fc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98947
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>